# PLAGE

./: README.md  dune-project
.github/workflows/: build_doc.yml
linear_type_variables_monomorphization/: dune-project
linear_type_variables_monomorphization/lib/: Core.ml  Core2.ml  Elaboration.ml  Elaboration2.ml  Format.ml  Formatting.ml  Grammar.ml  Highlighting.ml  Typing.ml  Typing2.ml  dune
ocalc/: dune-project  ocalc.opam
ocalc/lib/: Ast.ml  Ast_printer.ml  Eval.ml  Lexer.ml  Parser.ml  Token.ml  Token_kind.ml  dune
ocalc/test/: dune
orion_prop_oriented/: README.md  dune-project  orion_prop_oriented.opam
orion_prop_oriented/lib/: Context.ml  Environment.ml  Hypotheses.ml  Proposition.ml  Term.ml  Variable.ml  dune
orion_prop_oriented/test/: dune
orion_prop_oriented/theories/: Context.v  Environment.v  Hypotheses.v  Proposition.v  Term.v  dune
